syntax = "proto3";
package event;

message EventPb {
  enum Type {
    Unknown = 0;
    Created = 1;
    Updated = 2;
    Deleted = 3;
    Started = 4;
    Paused = 5;
    Resumed = 6;
    Finished = 7;
  }

  Type type = 1;
  string id = 2;
  string work_id = 3;
  string title = 5;
  int64 time = 6;
  int64 updated_at = 7;
}

